# CircuitPython_I2C_Expanders

./: README.rst  i2c_expanders.py  ilikecake_circuitpython_i2c_expanders.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml  release_pypi.yml
New folder/CircuitPython_I2C_Expanders/: README.rst  pyproject.toml
New folder/CircuitPython_I2C_Expanders/.github/workflows/: release_gh.yml
New folder/CircuitPython_I2C_Expanders/docs/: api.rst  conf.py  index.rst
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: circuitpython_i2c_expanders_simpletest.py  i2c_expanders_simpletest.py
i2c_expanders/: PCA9554.py  PCA9555.py  PCAL9538.py  PCAL9554.py  PCAL9555.py  digital_inout.py  helpers.py  i2c_expander.py
