# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Pat Satyshur
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "ilikecake-circuitpython-circuitpython-i2c-expanders"
description = "Drivers for various I2C GPIO expanders."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Pat Satyshur", email = "patrick@satyshur.net"}
]
urls = {Homepage = "https://github.com/ilikecake/Ilikecake_CircuitPython_CircuitPython_I2C_Expanders"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "circuitpython_i2c_expanders",
    "pca9555",
    "pcal9555",
    "pca9554",
    "pcal9554",
    "pcal9538",
    "pca9538",
    "i2c",
    "expander",
    "gpio",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ilikecake_circuitpython_i2c_expanders"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
